# torch_contour

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  example.ipynb  pyproject.toml  setup.cfg  test.ipynb
contour_to_mask/: __init__.py  contour_to_mask.py
tests/: test_torch_contour.py
torch_contour/: __init__.py  torch_contour.py
torch_contour.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
