[metadata]
name = torch_contour
version = attr: torch_contour.__version__
author = Antoine Habis
author_email = antoine.habis.tlcm@gmail.com
description = Differentiable contour to mask and contour to distance map implementation with PyTorch
keywords = differentiable contour processing, pytorch, machine learning
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/antoinehabis/torch_contour
project_urls =

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch
include_package_data = False

[options.package_data]
* = py.typed

[options.packages.find]
exclude=
    tests*